@@ -5,7 +5,8 @@
       21, 22, 23, 25, 37, 42, 43, 53, 77, 79, 87, 95, 101, 102, 
       103, 104, 109, 110, 111, 113, 115, 117, 119, 123, 135, 139,
       143, 179, 389, 465, 512, 513, 514, 515, 526, 530, 531, 532,
-      540, 556, 563, 587, 601, 636, 993, 995, 2049, 3659, 4045, 6000, 0);
+      540, 556, 563, 587, 601, 636, 993, 995, 2049, 3659, 4045, 
+      6000, 6665, 6666, 6667, 6668, 6669, 0);
     
     var baseURL = "255.255.255.255";
     var currentPort = 0;
