@@ -1,3 +1,13 @@
+2010-02-01  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Tim Hatcher.
+
+        Add common IRC ports to port blocking.
+        <rdar://problem/7593895> and https://bugs.webkit.org/show_bug.cgi?id=34451
+
+        * platform/KURL.cpp:
+        (WebCore::portAllowed):
+
 2010-01-29  Jeremy Orlow  <jorlow@chromium.org>
 
         Reviewed by Nate Chapin.
